// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mantine sawmill should generate dark theme based on custom colors 1`] = `
{
  "breakpoints": {
    "lg": "74em",
    "md": "64em",
    "sm": "48em",
    "xl": "90em",
    "xs": "30em",
  },
  "colorScheme": "dark",
  "colors": {
    "danger": [
      "#fff5f5",
      "#ffdada",
      "#ffbfbf",
      "#ff9797",
      "#ff5f5f",
      "#FF0000",
      "#f20000",
      "#d80000",
      "#bd0000",
      "#990000",
    ],
    "default": [
      "#f7f7f7",
      "#e4e4e4",
      "#d1d1d1",
      "#b7b7b7",
      "#989898",
      "#808080",
      "#797979",
      "#6d6d6d",
      "#5f5f5f",
      "#4d4d4d",
    ],
    "gray": [
      "#F6F7FC",
      "#E1E4ED",
      "#C1C7DC",
      "#6F768F",
      "#394261",
      "#252D47",
      "#232B43",
      "#1C2235",
      "#12182B",
      "#060C1F",
    ],
    "info": [
      "#f5f5ff",
      "#dadaff",
      "#bfbfff",
      "#9797ff",
      "#5f5fff",
      "#0000FF",
      "#0000f2",
      "#0000d8",
      "#0000bd",
      "#000099",
    ],
    "primary": [
      "#f7f5f7",
      "#e4dae4",
      "#d1bfd1",
      "#b797b7",
      "#985f98",
      "#800080",
      "#790079",
      "#6d006d",
      "#5f005f",
      "#4d004d",
    ],
    "success": [
      "#f5f7f5",
      "#dae4da",
      "#bfd1bf",
      "#97b797",
      "#5f985f",
      "#008000",
      "#007900",
      "#006d00",
      "#005f00",
      "#004d00",
    ],
    "warning": [
      "#fffff5",
      "#ffffda",
      "#ffffbf",
      "#ffff97",
      "#ffff5f",
      "#FFFF00",
      "#f2f200",
      "#d8d800",
      "#bdbd00",
      "#999900",
    ],
  },
  "defaultRadius": 0,
  "fontFamily": ""Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif",
  "fontFamilyMonospace": ""Ubuntu Mono", Menlo, Monaco, Consolas, "Courier New", monospace",
  "fontSizes": {
    "lg": "1.067rem",
    "md": "1.000rem",
    "sm": "0.878rem",
    "xl": "1.383rem",
    "xs": "0.823rem",
    "xxl": "2.479rem",
  },
  "headings": {
    "sizes": {
      "h1": {
        "fontSize": "1.5745299861316333rem",
      },
      "h2": {
        "fontSize": "1.2961572031209998rem",
      },
      "h3": {
        "fontSize": "1.2147677629999998rem",
      },
      "h4": {
        "fontSize": "1.1384889999999999rem",
      },
      "h5": {
        "fontSize": "1.067rem",
      },
      "h6": {
        "fontSize": "1rem",
      },
    },
  },
  "other": {
    "customColors": {
      "brand": {
        "concrete": "#93a5c0",
        "logo": "#8e99ab",
        "primary": "#ff1e1b",
        "secondary": "#ffebeb",
        "tertiary": "#5c6370",
      },
      "global": {
        "background": "#89a4ff",
        "contentBackground": "#0b42ff",
        "link": "#8cb5ea",
      },
      "variant": {
        "danger": "#FF0000",
        "default": "#808080",
        "info": "#0000FF",
        "primary": "#800080",
        "success": "#008000",
        "warning": "#FFFF00",
      },
    },
  },
  "primaryColor": "info",
  "primaryShade": {
    "dark": 5,
    "light": 5,
  },
  "spacing": {
    "lg": "1.68rem",
    "md": "1.04rem",
    "sm": "0.64rem",
    "xl": "2.72rem",
    "xs": "0.40rem",
    "xxl": "4.40rem",
    "xxs": "0.24rem",
  },
}
`;

exports[`mantine sawmill should generate light theme based on custom colors 1`] = `
{
  "breakpoints": {
    "lg": "74em",
    "md": "64em",
    "sm": "48em",
    "xl": "90em",
    "xs": "30em",
  },
  "colorScheme": "light",
  "colors": {
    "danger": [
      "#fff5f5",
      "#ffdada",
      "#ffbfbf",
      "#ff9797",
      "#ff5f5f",
      "#FF0000",
      "#f20000",
      "#d80000",
      "#bd0000",
      "#990000",
    ],
    "default": [
      "#f7f7f7",
      "#e4e4e4",
      "#d1d1d1",
      "#b7b7b7",
      "#989898",
      "#808080",
      "#797979",
      "#6d6d6d",
      "#5f5f5f",
      "#4d4d4d",
    ],
    "gray": [
      "#F6F7FC",
      "#E1E4ED",
      "#C1C7DC",
      "#6F768F",
      "#394261",
      "#252D47",
      "#232B43",
      "#1C2235",
      "#12182B",
      "#060C1F",
    ],
    "info": [
      "#f5f5ff",
      "#dadaff",
      "#bfbfff",
      "#9797ff",
      "#5f5fff",
      "#0000FF",
      "#0000f2",
      "#0000d8",
      "#0000bd",
      "#000099",
    ],
    "primary": [
      "#f7f5f7",
      "#e4dae4",
      "#d1bfd1",
      "#b797b7",
      "#985f98",
      "#800080",
      "#790079",
      "#6d006d",
      "#5f005f",
      "#4d004d",
    ],
    "success": [
      "#f5f7f5",
      "#dae4da",
      "#bfd1bf",
      "#97b797",
      "#5f985f",
      "#008000",
      "#007900",
      "#006d00",
      "#005f00",
      "#004d00",
    ],
    "warning": [
      "#fffff5",
      "#ffffda",
      "#ffffbf",
      "#ffff97",
      "#ffff5f",
      "#FFFF00",
      "#f2f200",
      "#d8d800",
      "#bdbd00",
      "#999900",
    ],
  },
  "defaultRadius": 0,
  "fontFamily": ""Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif",
  "fontFamilyMonospace": ""Ubuntu Mono", Menlo, Monaco, Consolas, "Courier New", monospace",
  "fontSizes": {
    "lg": "1.067rem",
    "md": "1.000rem",
    "sm": "0.878rem",
    "xl": "1.383rem",
    "xs": "0.823rem",
    "xxl": "2.479rem",
  },
  "headings": {
    "sizes": {
      "h1": {
        "fontSize": "1.5745299861316333rem",
      },
      "h2": {
        "fontSize": "1.2961572031209998rem",
      },
      "h3": {
        "fontSize": "1.2147677629999998rem",
      },
      "h4": {
        "fontSize": "1.1384889999999999rem",
      },
      "h5": {
        "fontSize": "1.067rem",
      },
      "h6": {
        "fontSize": "1rem",
      },
    },
  },
  "other": {
    "customColors": {
      "brand": {
        "concrete": "#93a5c0",
        "logo": "#8e99ab",
        "primary": "#ff1e1b",
        "secondary": "#ffebeb",
        "tertiary": "#5c6370",
      },
      "global": {
        "background": "#89a4ff",
        "contentBackground": "#0b42ff",
        "link": "#8cb5ea",
      },
      "variant": {
        "danger": "#FF0000",
        "default": "#808080",
        "info": "#0000FF",
        "primary": "#800080",
        "success": "#008000",
        "warning": "#FFFF00",
      },
    },
  },
  "primaryColor": "info",
  "primaryShade": {
    "dark": 5,
    "light": 5,
  },
  "spacing": {
    "lg": "1.68rem",
    "md": "1.04rem",
    "sm": "0.64rem",
    "xl": "2.72rem",
    "xs": "0.40rem",
    "xxl": "4.40rem",
    "xxs": "0.24rem",
  },
}
`;
